--- a/SVM_Regression.ipynb
+++ b/SVM_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7znPRf1/e7kQL1B2DFqUZ",
+      "authorship_tag": "ABX9TyNLiQRfqj6iyrrHnxWJvJiU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -375,7 +375,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://www.eecs.qmul.ac.uk/mmv/datasets/deap/\n",
+        "Dataset: https://www.eecs.qmul.ac.uk/mmv/datasets/deap/\n",
         "dataset - https://www.kaggle.com/datasets/samnikolas/eeg-dataset"
       ],
       "metadata": {
